@@ -6,6 +6,7 @@ import Midas.cosmeticshop.repository.user.BaseUserRepository;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -18,9 +19,11 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
 
 import java.util.Collections;
+import java.util.List;
 
 /*
     시큐리티 필터를 타는 로그인 방식의 동작은
@@ -85,9 +88,11 @@ public class SecurityConfig {
             .configurationSource(request -> {
                 CorsConfiguration configuration = new CorsConfiguration();
                 configuration.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
-                configuration.setAllowedMethods(Collections.singletonList("*"));
-                configuration.setAllowedHeaders(Collections.singletonList("*"));
+                configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
                 configuration.setAllowCredentials(true);
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
                 configuration.setMaxAge(3600L);
                 configuration.setExposedHeaders(Collections.singletonList("Authorization"));
                 return configuration;
@@ -106,28 +111,39 @@ public class SecurityConfig {
 
         // 경로별 인가 작업  = url 이 부분적으로 라도 중복되는 경우, role 검증을 하는 requestMatchers 를 먼저 호출해야한다
         http.authorizeHttpRequests(auth -> auth
+
                 // 로그인·회원가입 API
                 .requestMatchers(
+                    "/api/auth/me",
                     "/api/auth/login",
                     "/api/auth/signup/**",
                     "/api/auth/logout",
                     "/api/auth/reissue",
                     "/api/auth/validate-token"
                 ).permitAll()
+
                 // 상품 관련
                 .requestMatchers(
-                    "/api/products"
+                    "/carts",
+                    "api/orders/"
                 ).permitAll()
+
+                .requestMatchers(
+                    HttpMethod.POST, "/api/products"
+                ).hasRole("COMPANY")
 //                hasRole("COMPANY")  // 이후에 이걸로 교체
+
                 // HTML 페이지
                 .requestMatchers(
                     "/",
                     "/index.html"
                 ).permitAll()
+
                 // JS/CSS/이미지
                 .requestMatchers(
                     "/css/**", "/js/**", "/images/**", "/favicon.ico")
                 .permitAll()
+
                 // 관리자 화면
                 .requestMatchers("/admin/**").hasRole("ADMIN")
                 // 그 외
@@ -139,10 +155,11 @@ public class SecurityConfig {
             new JWTFilter(jwtUtil, baseUserRepository)
             , UsernamePasswordAuthenticationFilter.class // JWTFilter 먼저 등록
         );
+
         /*
-                LoginFilter가 아직 체인에 들어가기 전이라면 예상과 다른 위치에 놓일 가능성이 있으니
-                그냥 UsernamePasswordAuthenticationFilter.class 사용
-            */
+            LoginFilter가 아직 체인에 들어가기 전이라면 예상과 다른 위치에 놓일 가능성이 있으니
+            그냥 UsernamePasswordAuthenticationFilter.class 사용
+        */
 
         return http.build();
     }
